# Encoding

./: CMakeLists.txt  main.c  unit-test.cpp
.github/workflows/: cmake.yml
source/: encoded.c  encoded.h  pair.h
